--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "type": "git",
     "url": "git://github.com/pascalduez/grunt-svg2png.git"
   },
-  "license": "WTFPL",
+  "license": "unlicence",
   "scripts": {
     "test": "grunt"
   },
