--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grunt-svg2png",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Convert SVG to PNG",
   "keywords": [
     "gruntplugin",
@@ -25,18 +25,18 @@
     "test": "grunt"
   },
   "dependencies": {
-    "svg2png": "~1.0.0",
-    "chalk": "~0.3.0",
-    "async": "~0.2.9"
+    "svg2png": "^1.0.1",
+    "chalk": "^0.4.0",
+    "async": "^0.2.10"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-simple-mocha": "~0.4.0",
-    "image-size": "~0.1.16"
+    "grunt": "^0.4.2",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-simple-mocha": "^0.4.0",
+    "image-size": "^0.2.1"
   },
   "peerDependencies": {
-    "grunt": "~0.4"
+    "grunt": "^0.4.2"
   },
   "engines": {
     "node": ">=0.8.0"
