--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "image-size": "^0.2.1"
   },
   "peerDependencies": {
-    "grunt": "^0.4.2"
+    "grunt": ">=0.4.0"
   },
   "engines": {
     "node": ">=0.8.0"
