--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "bugs": "https://github.com/pascalduez/grunt-svg2png/issues",
   "author": {
     "name": "Pascal Duez",
-    "url": "http://pascalduez.me"
+    "url": "https://github.com/pascalduez"
   },
   "repository": {
     "type": "git",
